--- a/.github/workflows/dotnet-core_archirua.yml
+++ b/.github/workflows/dotnet-core_archirua.yml
@@ -24,5 +24,5 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 #    - name: Test
 #      run: dotnet test --no-restore --verbosity normal
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2   
+#    - name: Upload a Build Artifact
+#      uses: actions/upload-artifact@v2   
